# bookie

./: .gitignore  pyproject.toml
api/api/: settings.py
api/books/: models.py  serializers.py  views.py
api/books/migrations/: 0001_initial.py  0002_auto_20200107_1948.py  0003_auto_20200107_1949.py  0004_auto_20200107_2145.py  0005_auto_20200107_2149.py  0006_auto_20200107_2151.py  0007_book_have_read.py
api/booksList/: admin.py  apps.py  models.py  serializers.py  views.py
api/booksList/migrations/: 0001_initial.py  0002_auto_20200107_2158.py  0003_auto_20200107_2211.py
api/core/: urls.py
api/users/: managers.py  models.py
api/users/migrations/: 0001_initial.py  0002_user_is_staff.py
bookie/src/api/api/: settings.py
tests/: test_bookie.py
